samples/_failures_safe/1761631953_dd75aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6837fbb3.c: In function ‘main’:
./samples/SAFE/__tmp_6837fbb3.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
